<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">


    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolBarExcercise"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tvready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/get_ready_for"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/flProgressBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/flProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/item_circular_border"
        app:layout_constraintTop_toBottomOf="@id/toolBarExcercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/progressBar"
            android:background="@drawable/circular_progress_gray"
            android:progressDrawable="@drawable/circular_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:max="10"
            android:progress="100"
            android:rotation="-90"/>
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"
            android:gravity="center">
            <TextView
                android:id="@+id/tvtimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="10"
                />

        </LinearLayout>
    </FrameLayout>
    <TextView
        android:id="@+id/tvUpcomingLabel"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_exercise"
        app:layout_constraintTop_toBottomOf="@id/flProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvUpcomingExerciseName"
        android:textSize="13sp"
        android:textColor="@color/colorAccent"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/tvUpcomingExerciseName"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/upcoming_exerciselabel"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/tvUpcomingLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/exerciseIamge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/stretch"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/toolBarExcercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvexerciseName"
        android:contentDescription="@string/exercise_image" />

    <TextView
        android:id="@+id/tvexerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercisename"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseIamge"
        tools:visibility="gone" />

    <FrameLayout
        android:id="@+id/flProgressBar2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        android:background="@drawable/item_circular_border"
        app:layout_constraintTop_toBottomOf="@id/tvexerciseName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/progressBar2"
            android:background="@drawable/circular_progress_gray"
            android:progressDrawable="@drawable/circular_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:max="30"
            android:progress="300"
            android:rotation="-90"/>
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"
            android:gravity="center">

            <TextView
                android:id="@+id/tvtimer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="30"
                />
        </LinearLayout>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="5dp"
        android:id="@+id/rvExerciseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flProgressBar2"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>